// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Default renders correctly 1`] = `
<jest>
  <nav
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <ul
        class="ecl-tabs__list"
        role="tablist"
      >
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="true"
            class="ecl-link ecl-link--no-visited ecl-tabs__link ecl-tabs__link--active"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item ecl-tabs__item--more"
          role="presentation"
        >
          <button
            class="ecl-button ecl-button--ghost ecl-tabs__toggle"
            tabindex="-1"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                More (%d)
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-button ecl-button--ghost ecl-tabs__prev ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <button
        aria-hidden="true"
        class="ecl-button ecl-button--ghost ecl-tabs__next ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </nav>
</jest>
`;

exports[`Tabs Default renders correctly with extra attributes 1`] = `
<jest>
  <nav
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-tabs__container"
    >
      <ul
        class="ecl-tabs__list"
        role="tablist"
      >
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="true"
            class="ecl-link ecl-link--no-visited ecl-tabs__link ecl-tabs__link--active"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item ecl-tabs__item--more"
          role="presentation"
        >
          <button
            class="ecl-button ecl-button--ghost ecl-tabs__toggle"
            tabindex="-1"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                More (%d)
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-button ecl-button--ghost ecl-tabs__prev ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <button
        aria-hidden="true"
        class="ecl-button ecl-button--ghost ecl-tabs__next ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </nav>
</jest>
`;

exports[`Tabs Default renders correctly with extra class names 1`] = `
<jest>
  <nav
    class="ecl-tabs custom-class custom-class--test"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <ul
        class="ecl-tabs__list"
        role="tablist"
      >
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="true"
            class="ecl-link ecl-link--no-visited ecl-tabs__link ecl-tabs__link--active"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
          role="presentation"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </li>
        <li
          class="ecl-tabs__item ecl-tabs__item--more"
          role="presentation"
        >
          <button
            class="ecl-button ecl-button--ghost ecl-tabs__toggle"
            tabindex="-1"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                More (%d)
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-button ecl-button--ghost ecl-tabs__prev ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <button
        aria-hidden="true"
        class="ecl-button ecl-button--ghost ecl-tabs__next ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </nav>
</jest>
`;
